--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@babel/preset-react": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
     "@babel/runtime": "^7.11.2",
+    "@types/jest": "^26.0.15",
     "@types/node": "^12.7.2",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.8.5",
@@ -38,6 +39,7 @@
     "@vkontakte/vk-bridge": "^2.1.3",
     "@vkontakte/vkjs": "0.5.0",
     "autoprefixer": "^9.8.0",
+    "babel-jest": "^26.6.3",
     "babel-loader": "^8.1.0",
     "classnames": "^2.2.6",
     "clean-webpack-plugin": "^3.0.0",
@@ -48,6 +50,7 @@
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^2.0.1",
     "file-loader": "^6.2.0",
+    "jest": "^26.6.3",
     "mini-css-extract-plugin": "^1.2.1",
     "postcss": "8.1.4",
     "postcss-cli": "8.1.0",
@@ -66,7 +69,7 @@
     "stylelint": "^10.1.0",
     "stylelint-config-standard": "^18.3.0",
     "ts-loader": "^8.0.9",
-    "typescript": "3.7.5",
+    "typescript": "3.8",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
     "webpack-merge": "^4.2.2",
@@ -105,10 +108,12 @@
     "tsc": "cross-env NODE_ENV=production tsc --emitDeclarationOnly --declaration",
     "tsc-es6": "cross-env NODE_ENV=production tsc --emitDeclarationOnly --declaration --outDir dist/es6/",
     "clear": "shx rm -rf dist/*",
-    "test": "tsc --noEmit && eslint --ext .jsx,.js,.ts,.tsx src/ && stylelint \"./src/**/*.css\"",
+    "test:unit": "jest",
+    "test:static": "concurrently 'tsc --noEmit' 'eslint --ext .jsx,.js,.ts,.tsx src/' 'stylelint \"./src/**/*.css\"'",
+    "test": "concurrently 'yarn test:unit' 'yarn test:static'",
     "copy-default-scheme": "shx cp ./src/styles/bright_light.css ./dist/default_scheme.css"
   },
   "pre-commit": [
-    "test"
+    "test:static"
   ]
 }
