--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "react-frame-component": "^3.0.0",
     "react-styleguidist": "^11.0.8",
     "shx": "^0.3.2",
+    "simple-statistics": "^7.3.2",
     "source-map-loader": "^0.2.4",
     "stylelint": "^10.1.0",
     "stylelint-config-standard": "^18.3.0",
@@ -105,6 +106,7 @@
   },
   "scripts": {
     "prepare": "yarn build",
+    "bench": "NODE_ENV=production webpack-dev-server --config ./e2e/webpack.benchmark.js",
     "styleguide": "cross-env NODE_ENV=development styleguidist server --config=styleguide/config.js",
     "styleguide:profiling": "cross-env NODE_ENV=production styleguidist server --config=styleguide/config.js --profiling",
     "styleguide:build": "cross-env NODE_ENV=production styleguidist build --config=styleguide/config.js",
@@ -130,14 +132,12 @@
     "test:unit:ci": "yarn test:unit --ci --silent --outputFile test-results.json --json --coverage --coverageReporters='json-summary'",
     "test:e2e": "jest --config e2e/jest.e2e.config.js",
     "test:code": "jest",
-
     "lint:es": "eslint --ext .jsx,.js,.ts,.tsx src/ --cache --cache-location .cache/.eslintcache",
     "lint:es:ci": "yarn lint:es -o lint-results.json -f json",
     "lint:style": "stylelint \"./src/**/*.css\" --cache --cache-location .cache/.stylelintcache",
     "typecheck": "tsc --incremental --emitDeclarationOnly --declaration --tsBuildInfoFile .cache/.tsbuildinfo --outDir .cache/ts",
     "test:static": "concurrently 'yarn typecheck' 'yarn lint:es' 'yarn lint:style'",
     "test:static:ci": "concurrently 'yarn typecheck' 'yarn lint:es:ci' 'yarn lint:style'",
-
     "test": "concurrently 'yarn test:code' 'yarn test:static'",
     "test:quick": "concurrently 'yarn test:unit:quick' 'yarn test:static'",
     "test:ci": "concurrently 'yarn test:unit:ci' 'yarn test:static:ci'",
