--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "autoprefixer": "^9.8.0",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.1.0",
+    "babel-plugin-transform-remove-imports": "^1.5.2",
     "chalk": "^4.1.0",
     "classnames": "^2.2.6",
     "clean-webpack-plugin": "^3.0.0",
@@ -138,9 +139,11 @@
     "babel-cjs-dev": "babel --config-file ./babel.cjs.config.js src/ --out-dir dist/cjs/ --extensions .tsx,.jsx,.ts,.js --watch",
     "tsc-dev": "tsc --emitDeclarationOnly --declaration --outDir dist/ --watch --preserveWatchOutput",
     "tsc-cjs-dev": "tsc --emitDeclarationOnly --declaration --outDir dist/cjs/ --watch --preserveWatchOutput",
-    "build": "yarn tsc && yarn babel && yarn tsc-cjs && yarn babel-cjs && yarn postcss && yarn postcss-unstable && yarn copy-default-scheme",
+    "build": "concurrently 'yarn babel-css-modules' 'yarn babel' 'yarn babel-cjs' 'yarn tsc' 'yarn tsc-cjs' 'yarn postcss-modules' 'yarn postcss' 'yarn postcss-unstable' 'yarn copy-default-scheme'",
+    "postcss-modules": "cross-env NODE_ENV=production postcss 'src/**/*.css' --base src --dir dist/cssm --verbose",
     "postcss": "cross-env NODE_ENV=production postcss src/styles/styles.css --output dist/vkui.css --verbose",
     "postcss-unstable": "NODE_ENV=production postcss src/styles/unstable.css --output dist/unstable.css --verbose",
+    "babel-css-modules": "cross-env NODE_ENV=production babel src/ --config-file ./babel.css-modules.config.js --out-dir dist/cssm --source-maps --extensions .tsx,.jsx,.ts,.js",
     "babel": "cross-env NODE_ENV=production babel src/ --out-dir dist/ --source-maps --extensions .tsx,.jsx,.ts,.js",
     "babel-cjs": "cross-env NODE_ENV=production babel --config-file ./babel.cjs.config.js src/ --out-dir dist/cjs/ --source-maps --extensions .tsx,.jsx,.ts,.js",
     "tsc": "cross-env NODE_ENV=production tsc --emitDeclarationOnly --declaration -p tsconfig.dist.json",
