add babel plugin for redirecting vkui to css-modules build

--- a/package.json
+++ b/package.json
@@ -175,5 +175,7 @@
   "pre-commit": [
     "test:static"
   ],
-  "dependencies": {}
+  "dependencies": {
+    "babel-plugin-module-resolver": "^4.1.0"
+  }
 }
